# kaeru

./: .gitignore  Makefile  README.md  RE_NOTES.md  oplus_custom.img  package-lock.json  para.img  pl.img  pyproject.toml
.github/workflows/: opencode.yml  opencoded.yml
arch/: Kconfig
arch/arm64/: Makefile  cache-ops.S  linker.lds.S  memchr.S  memcpy.S  memset.S
board/: Kconfig  Makefile
board/oneplus/: board-honda.c
configs/oneplus/: honda_defconfig
docs/: lk-analysis.md
docs/analysis/: README.md  firmware-overview.md  lk.md  mtk-da-brom.md  mtk-protocol.md  oplus-toolshub-bins.md  opseclib-dll.md  servermanager-exe.md
include/arch/: arm.h  arm64.h
include/lib/: common.h
lib/: common.c
main/: main.c  start.S
scripts/analysis/: analyze_lk.py  extract_mtk_sla_keys.py
soc/: Kconfig
src/kaeru_mtk/: __init__.py  cli.py
src/kaeru_mtk/auth/: __init__.py  resolver.py
src/kaeru_mtk/commands/: __init__.py  _runner.py  _session.py  auth.py  detect.py  diag.py  driver.py  driver_cmd.py  dump.py  erase.py  exploit.py  flash.py  info.py  socs.py  unlock.py
src/kaeru_mtk/data/: __init__.py  auth_index.py  sla_keys.py  soc_db.py  usb_ids.py
src/kaeru_mtk/driver/: __init__.py  windows.py
src/kaeru_mtk/formats/: da_blob.py  scatter.py
src/kaeru_mtk/oneplus/: auth.py
src/kaeru_mtk/protocol/: __init__.py  brom.py  da.py  da_v6.py  frame.py  sla.py
src/kaeru_mtk/protocol/exploits/: __init__.py  base.py  carbonara.py  hashimoto.py  heapbait.py  iguana.py  kamakiri.py  kamakiri2.py
src/kaeru_mtk/runner/: __init__.py  mtkclient.py
src/kaeru_mtk/transport/: __init__.py  interface.py  mock.py  usb.py
src/kaeru_mtk/utils/: __init__.py  errors.py  hexdump.py  logging.py
tests/: test_auth_bundled.py  test_cli.py  test_exploits.py  test_ops.py  test_protocol.py  test_protocol_brom.py  test_resolver.py  test_runner.py  test_sla_keys.py  test_soc_db.py  test_transport.py
tools/kaeru-mtk/: README.md  pyproject.toml
tools/kaeru-mtk/src/kaeru_mtk/: cli.py
tools/kaeru-mtk/src/kaeru_mtk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/kaeru-mtk/src/kaeru_mtk/commands/: __init__.py  _session.py  diag.py  dump.py  erase.py  flash.py  info.py  unlock.py
tools/kaeru-mtk/src/kaeru_mtk/formats/: __init__.py  auth_sv5.py  ofp.py  ops.py
tools/kaeru-mtk/src/kaeru_mtk/oneplus/: __init__.py  auth.py  readback.py  unlock.py
tools/kaeru-mtk/src/kaeru_mtk/protocol/: __init__.py  brom.py  da_v5.py  sla.py
tools/kaeru-mtk/src/kaeru_mtk/transport/: __init__.py  base.py  identifiers.py  usb.py
tools/kaeru-mtk/src/kaeru_mtk/utils/: __init__.py  errors.py
tools/kaeru-mtk/tests/: test_auth_sv5.py  test_scatter.py
utils/: extract_fastboot.py  parse_aarch64.py
